welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:20: error: expected class or object definition
for (i <- 1 to 7) {
^Methods:27: error: Unmatched closing brace '}' ignored here
	} 
        ^Methods:28: error: eof expected but '}' found.
}
^